# voice

./: .env.example  .gitignore  README.md  bot.py  config.py  handlers.py  issues.md  pipeline.py  prompts.py  pyproject.toml  services.py  spec.md
tests/: conftest.py  test_config.py  test_pipeline.py
